# sipm4eic-testbeam2023-analysis-QA-dev

./: README.md
lib/: data.h  framer.h  lightdata.h  lightio.h  mapping.h  utility.h
lists/: first.list  first_runs_53v.list  mirror_scan_bkw.list  mirror_scan_fwd.list
macros/: fillfine.C  fillrefine.C  finecalib_step0.C  hitmap.C  lightQA.C  lightfine.C  lightreader.C  lightwriter.C  recoQA.C  recowriter.C  refinecalib.C  spillcalib.C
recoana/: README.md
recoana/cuda/hough/: CMakeLists.txt  common.h  cuda.cu  main.cc
recoana/cuda/hough/cmake/: FindROOT.cmake
recoana/cuda/hough/scripts/: hough.sh
recoana/python/: hitmap.py  recoana.py
recoana/root/: display.C  hitmap.C  hough.C  invraytrac.C  irt.C
scripts/: hough.sh  recowriter.sh
